projectroles/static/projectroles/css/projectroles.css
/* ... */
td.sodar-pr-project-list-load-td {
  vertical-align: middle !important;
  height: 106px !important;
}

div.sodar-pr-project-title-container {
  margin-left: 20px;
  text-indent: -20px;
}

@media screen and (max-width: 1000px) {
  table.sodar-pr-project-list-table thead tr th#sodar-pr-project-list-header-role,
  table.sodar-pr-project-list-table tbody tr td.sodar-pr-project-list-role {
    display: none;
  }
}

@media screen and (max-width: 700px) {
  table.sodar-pr-project-list-table tr th:nth-child(n+2),
  table.sodar-pr-project-list-table tr td:nth-child(n+2) {
    display: none;
  }
}

.dt-paging {
  width: 100%;
  padding: 12px;
  border-top: 1px solid #dfdfdf;
}

.dt-paging .pagination .active .page-link {
  background-color: #007bff;
  color: #ffffff;
}

.pagination {
  justify-content: center !important;
  margin-bottom: 0 !important;
}

li.sodar-paginate-button {
  border: 0;
  margin: 0 !important;
  padding: 0;
}

li.sodar-paginate-button a {
  min-width: 45px;
}


/* Popups ------------------------------------------------------------------- */


.popover {
  max-width: 600px;
}

.sodar-popup-overlay {
  background: transparent;
  min-width: 50%;
  max-width: 85%;
  margin-top: 25px;
  margin-bottom: 25px;
  text-align: center;
}


/* Lists -------------------------------------------------------------------- */


dl {
  margin: 0;
  padding-left: 0;
  padding-right: 0;
  padding-bottom: 8px;
}

dl dt {
  padding-left: 0;
}

dl dd {
  padding-left: 0;
}


/* Buttons, links and forms ------------------------------------------------- */


/* HACK for autocomplete widget to look similar to the rest of the form */

.select2-container--default .select2-selection--single {
  width: 100%;
  border: 1px solid #ced4da;
  height: calc(2.25rem + 2px);
  padding: .3rem .5rem;
  font-size: 1rem;
  font-weight: 400;
  line-height: 1.5;
  background-color: #ffffff;
  background-clip: padding-box;
  border-radius: .25rem;
}

/* Fix for incorrect highlight color after DAL upgrade (#1412) */
.select2-results__option--highlighted {
  color: #ffffff !important;
}

/* HACK for Bootstrap v4 button group alignment with dropdown enabled */
.btn {
  height: 2.35em;
}

.dropdown-toggle {
  height: inherit;
}

.btn-group {
  height: 2.35em;
}

/* Enable disabling button-style anchors */
a.btn[disabled='disabled'] {
  pointer-events: none;
  opacity: 75%;
}

.badge-light {
  border: 1px solid #dfdfdf;
}

.sodar-list-btn-group {
  height: 1.55em;
}

.sodar-list-btn {
  white-space: nowrap !important;
  padding-top: 1px;
  padding-left: 4px;
  padding-right: 4px;
  height: 1.55em;
}

a.sodar-pr-btn-title {
  line-height: 30px;
  padding: 0;
}

a#sodar-pr-btn-copy-uuid i {
  padding-top: 3px;
  font-size: 24px;
}

a.sodar-pr-btn-copy-secret i {
  padding-top: 3px;
  font-size: 24px;
}

.sodar-pr-sidebar-nav-item a {
  padding-bottom: 2px !important;
  word-break: break-word;
}

.sodar-pr-sidebar-alt-btn {
  height: 100%;
  margin-right: 12px;
  font-size: 100%;
  z-index: 1100;
}

.sodar-pr-sidebar-alt-btn a {
  line-height: 24px;
}

.sodar-list-dropdown {
  white-space: nowrap !important;
  height: 1.55em;
  width: 50px !important;
  padding: 1px !important;
}

.sodar-details-app-button {
  padding-top: 4px;
  padding-right: 0;
}

.sodar-pr-sidebar-nav {
  width: 100%;
}

.sodar-pr-sidebar-nav-ul {
  width: 100%;
}

.sodar-pr-sidebar-nav-ul li {
  width: 100%;
  font-size: 75%;
  line-height: normal;
  padding-bottom: 8px;
  position: relative;
}


/* App alert badge */
#sodar-app-alert-badge {
  line-height: 36px !important;
  font-size: 125%;
}

#sodar-app-alert-badge-dismiss {
  padding-top: 1px !important;
}

#sodar-app-alert-badge a:link,
#sodar-app-alert-badge a:visited {
  color: #fff !important;
}

#sodar-app-alert-icon {
  animation: blink 1.5s ease-in infinite;
}

@keyframes blink {
  from, to { opacity: 1 }
  50% { opacity: 0 }
}

/* Badge group */
.badge-group {
  padding: 2px;
  display: inline-flex;
}

.badge-group > .badge:not(:first-child):not(:last-child) {
  border-radius: 0;
  margin-left: 0;
  margin-right: 0;
}

.badge-group > .badge:first-child {
  border-top-right-radius: 0;
  border-bottom-right-radius: 0;
  margin-right: 0;
}

.badge-group > .badge:last-child {
  border-top-left-radius: 0;
  border-bottom-left-radius: 0;
  margin-left: 0;
}

/* Generic object badge used for projects, users etc */
span.sodar-obj-badge {
  vertical-align: top;
  margin-top: 2px;
  overflow: hidden;
  text-overflow: ellipsis;
  max-width: 300px;
}
span.sodar-obj-badge a {
  color: inherit;
}

/* NOTE: Notch visualizaton for sidebar moved into base.html */

.sodar-pr-sidebar-nav-ul li i {
  padding-bottom: 4px;
  font-size: 32px;
}

a.sodar-nav-link-last {
  padding-right: 0 !important;
}

.sodar-input-group {
  white-space: nowrap;
}

.sodar-header-input-group {
  white-space: nowrap;
  padding-right: 0;
  max-width: 300px;
}

.sodar-header-button,
.sodar-header-input-group button,
.sodar-header-input-group a {
  height: 30px;
  padding-top: 3px;
}

.sodar-header-input-group input.form-control {
  height: 30px;
}

.sodar-form-control-table {
  height: 28px !important;
  font-size: 85% !important;
}

.sodar-horizontal-radio {
  padding-right: 18px;
}

/* HACK for Bootstrap4 not properly supporting <select> with input-group */
.sodar-select-append {
  border-left: 0;
  border-top-left-radius: 0;
  border-bottom-left-radius: 0;
}

/* Select2 autocomplete field tweaks */
span.select2-container {
  width: 100% !important;
}

span.select2-selection {
  padding-left: 0 !important;
  height: 38px !important;
  border: 1px solid #ced4da !important;
}

span.select2-selection__arrow {
  height: 38px !important;
}

span.select2-selection__rendered {
  padding-left: 12px !important;
  color: #495057 !important;
}

/* Fix browser-specific submit button spinner alignment (#1291) */
.sodar-btn-spinner {
    margin-bottom: 1px;
  }
@supports (-moz-appearance:none) {
  .sodar-btn-spinner {
    margin-bottom: 2px;
  }
}
/* ... */

